--- a/src/arm_controller/config/robotarm_controllers.yaml
+++ b/src/arm_controller/config/robotarm_controllers.yaml
@@ -4,6 +4,9 @@ controller_manager:
 
     arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
+
+    gripper_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
     
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
@@ -15,8 +18,17 @@ arm_controller:
       - joint_2
       - joint_3
       - joint_4
+    command_interfaces:
+      - position
+    state_interfaces:
+      - position
+    open_loop_control: true
+    allow_integration_in_goal_trajectories: true
+
+gripper_controller:
+  ros__parameters:
+    joints:
       - joint_5
-      - joint_6
     command_interfaces:
       - position
     state_interfaces:
