--- a/src/buddy_arm_moveit/config/moveit_controllers.yaml
+++ b/src/buddy_arm_moveit/config/moveit_controllers.yaml
@@ -5,7 +5,7 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 moveit_simple_controller_manager:
   controller_names:
     - arm_controller
-    - hand_controller
+    - gripper_controller
 
   arm_controller:
     type: FollowJointTrajectory
@@ -16,7 +16,7 @@ moveit_simple_controller_manager:
       - joint_2
       - joint_3
       - joint_4
-  hand_controller:
+  gripper_controller:
     type: FollowJointTrajectory
     action_ns: follow_joint_trajectory
     default: true
